report8/ex3/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET var vars EQ expr SEMISEMI
   4           | LET REC var var EQ expr SEMISEMI

   5  expr : LET var EQ expr IN expr
   6       | LET var vars EQ expr IN expr
   7       | LET REC var var EQ expr IN expr
   8       | IF expr THEN expr ELSE expr
   9       | FUN var ARROW expr
  10       | FUN var vars ARROW expr
  11       | DFUN var ARROW expr
  12       | arith_expr EQ arith_expr
  13       | arith_expr LT arith_expr
  14       | arith_expr

  15  arith_expr : arith_expr PLUS factor_expr
  16             | arith_expr MINUS factor_expr
  17             | factor_expr

  18  factor_expr : factor_expr TIMES app_expr
  19              | factor_expr DIV app_expr
  20              | app_expr

  21  app_expr : app_expr atomic_expr
  22           | atomic_expr

  23  atomic_expr : INT
  24              | BOOL
  25              | ID
  26              | LPAR expr RPAR

  27  vars : var vars
  28       | var

  29  var : ID

  30  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	toplevel  goto 11
	expr  goto 12
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (23)

	.  reduce 23


state 4
	atomic_expr : BOOL .  (24)

	.  reduce 24


state 5
	atomic_expr : ID .  (25)

	.  reduce 25


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . var vars EQ expr SEMISEMI  (3)
	toplevel : LET . REC var var EQ expr SEMISEMI  (4)
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . var vars EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 17
	REC  shift 18
	.  error

	var  goto 19


state 7
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 21
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 8
	atomic_expr : LPAR . expr RPAR  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 22
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 9
	expr : FUN . var ARROW expr  (9)
	expr : FUN . var vars ARROW expr  (10)

	ID  shift 17
	.  error

	var  goto 23


state 10
	expr : DFUN . var ARROW expr  (11)

	ID  shift 17
	.  error

	var  goto 24


state 11
	%entry% : '\001' toplevel .  (30)

	.  reduce 30


state 12
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 25
	.  error


state 13
	expr : arith_expr . EQ arith_expr  (12)
	expr : arith_expr . LT arith_expr  (13)
	expr : arith_expr .  (14)
	arith_expr : arith_expr . PLUS factor_expr  (15)
	arith_expr : arith_expr . MINUS factor_expr  (16)

	PLUS  shift 26
	MINUS  shift 27
	EQ  shift 28
	LT  shift 29
	IN  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14


state 14
	arith_expr : factor_expr .  (17)
	factor_expr : factor_expr . TIMES app_expr  (18)
	factor_expr : factor_expr . DIV app_expr  (19)

	TIMES  shift 30
	DIV  shift 31
	IN  reduce 17
	PLUS  reduce 17
	MINUS  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17


state 15
	factor_expr : app_expr .  (20)
	app_expr : app_expr . atomic_expr  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 20
	PLUS  reduce 20
	TIMES  reduce 20
	MINUS  reduce 20
	DIV  reduce 20
	EQ  reduce 20
	LT  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	SEMISEMI  reduce 20

	atomic_expr  goto 32


state 16
	app_expr : atomic_expr .  (22)

	.  reduce 22


state 17
	var : ID .  (29)

	.  reduce 29


state 18
	toplevel : LET REC . var var EQ expr SEMISEMI  (4)
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 17
	.  error

	var  goto 33


state 19
	toplevel : LET var . EQ expr SEMISEMI  (2)
	toplevel : LET var . vars EQ expr SEMISEMI  (3)
	expr : LET var . EQ expr IN expr  (5)
	expr : LET var . vars EQ expr IN expr  (6)

	ID  shift 17
	EQ  shift 34
	.  error

	var  goto 35
	vars  goto 36


state 20
	expr : LET . var EQ expr IN expr  (5)
	expr : LET . var vars EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)

	ID  shift 17
	REC  shift 37
	.  error

	var  goto 38


state 21
	expr : IF expr . THEN expr ELSE expr  (8)

	THEN  shift 39
	.  error


state 22
	atomic_expr : LPAR expr . RPAR  (26)

	RPAR  shift 40
	.  error


state 23
	expr : FUN var . ARROW expr  (9)
	expr : FUN var . vars ARROW expr  (10)

	ID  shift 17
	ARROW  shift 41
	.  error

	var  goto 35
	vars  goto 42


state 24
	expr : DFUN var . ARROW expr  (11)

	ARROW  shift 43
	.  error


state 25
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 26
	arith_expr : arith_expr PLUS . factor_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 44
	app_expr  goto 15
	atomic_expr  goto 16


state 27
	arith_expr : arith_expr MINUS . factor_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 45
	app_expr  goto 15
	atomic_expr  goto 16


state 28
	expr : arith_expr EQ . arith_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 46
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 29
	expr : arith_expr LT . arith_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 47
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 30
	factor_expr : factor_expr TIMES . app_expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 48
	atomic_expr  goto 16


state 31
	factor_expr : factor_expr DIV . app_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 49
	atomic_expr  goto 16


state 32
	app_expr : app_expr atomic_expr .  (21)

	.  reduce 21


state 33
	toplevel : LET REC var . var EQ expr SEMISEMI  (4)
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 17
	.  error

	var  goto 50


state 34
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 51
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 35
	vars : var . vars  (27)
	vars : var .  (28)

	ID  shift 17
	EQ  reduce 28
	ARROW  reduce 28

	var  goto 35
	vars  goto 52


state 36
	toplevel : LET var vars . EQ expr SEMISEMI  (3)
	expr : LET var vars . EQ expr IN expr  (6)

	EQ  shift 53
	.  error


state 37
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 17
	.  error

	var  goto 54


state 38
	expr : LET var . EQ expr IN expr  (5)
	expr : LET var . vars EQ expr IN expr  (6)

	ID  shift 17
	EQ  shift 55
	.  error

	var  goto 35
	vars  goto 56


state 39
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 57
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 40
	atomic_expr : LPAR expr RPAR .  (26)

	.  reduce 26


state 41
	expr : FUN var ARROW . expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 58
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 42
	expr : FUN var vars . ARROW expr  (10)

	ARROW  shift 59
	.  error


state 43
	expr : DFUN var ARROW . expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 60
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 44
	arith_expr : arith_expr PLUS factor_expr .  (15)
	factor_expr : factor_expr . TIMES app_expr  (18)
	factor_expr : factor_expr . DIV app_expr  (19)

	TIMES  shift 30
	DIV  shift 31
	IN  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	EQ  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	SEMISEMI  reduce 15


state 45
	arith_expr : arith_expr MINUS factor_expr .  (16)
	factor_expr : factor_expr . TIMES app_expr  (18)
	factor_expr : factor_expr . DIV app_expr  (19)

	TIMES  shift 30
	DIV  shift 31
	IN  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	EQ  reduce 16
	LT  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	SEMISEMI  reduce 16


state 46
	expr : arith_expr EQ arith_expr .  (12)
	arith_expr : arith_expr . PLUS factor_expr  (15)
	arith_expr : arith_expr . MINUS factor_expr  (16)

	PLUS  shift 26
	MINUS  shift 27
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12


state 47
	expr : arith_expr LT arith_expr .  (13)
	arith_expr : arith_expr . PLUS factor_expr  (15)
	arith_expr : arith_expr . MINUS factor_expr  (16)

	PLUS  shift 26
	MINUS  shift 27
	IN  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13


state 48
	factor_expr : factor_expr TIMES app_expr .  (18)
	app_expr : app_expr . atomic_expr  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 18
	PLUS  reduce 18
	TIMES  reduce 18
	MINUS  reduce 18
	DIV  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	SEMISEMI  reduce 18

	atomic_expr  goto 32


state 49
	factor_expr : factor_expr DIV app_expr .  (19)
	app_expr : app_expr . atomic_expr  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 19
	PLUS  reduce 19
	TIMES  reduce 19
	MINUS  reduce 19
	DIV  reduce 19
	EQ  reduce 19
	LT  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	SEMISEMI  reduce 19

	atomic_expr  goto 32


state 50
	toplevel : LET REC var var . EQ expr SEMISEMI  (4)
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 61
	.  error


state 51
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 62
	SEMISEMI  shift 63
	.  error


state 52
	vars : var vars .  (27)

	.  reduce 27


state 53
	toplevel : LET var vars EQ . expr SEMISEMI  (3)
	expr : LET var vars EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 64
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 54
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 17
	.  error

	var  goto 65


state 55
	expr : LET var EQ . expr IN expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 66
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 56
	expr : LET var vars . EQ expr IN expr  (6)

	EQ  shift 67
	.  error


state 57
	expr : IF expr THEN expr . ELSE expr  (8)

	ELSE  shift 68
	.  error


state 58
	expr : FUN var ARROW expr .  (9)

	.  reduce 9


state 59
	expr : FUN var vars ARROW . expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 69
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 60
	expr : DFUN var ARROW expr .  (11)

	.  reduce 11


state 61
	toplevel : LET REC var var EQ . expr SEMISEMI  (4)
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 70
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 62
	expr : LET var EQ expr IN . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 71
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 63
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 64
	toplevel : LET var vars EQ expr . SEMISEMI  (3)
	expr : LET var vars EQ expr . IN expr  (6)

	IN  shift 72
	SEMISEMI  shift 73
	.  error


state 65
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 74
	.  error


state 66
	expr : LET var EQ expr . IN expr  (5)

	IN  shift 62
	.  error


state 67
	expr : LET var vars EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 75
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 68
	expr : IF expr THEN expr ELSE . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 76
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 69
	expr : FUN var vars ARROW expr .  (10)

	.  reduce 10


state 70
	toplevel : LET REC var var EQ expr . SEMISEMI  (4)
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 77
	SEMISEMI  shift 78
	.  error


state 71
	expr : LET var EQ expr IN expr .  (5)

	.  reduce 5


state 72
	expr : LET var vars EQ expr IN . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 79
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 73
	toplevel : LET var vars EQ expr SEMISEMI .  (3)

	.  reduce 3


state 74
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 80
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 75
	expr : LET var vars EQ expr . IN expr  (6)

	IN  shift 72
	.  error


state 76
	expr : IF expr THEN expr ELSE expr .  (8)

	.  reduce 8


state 77
	expr : LET REC var var EQ expr IN . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	DFUN  shift 10
	.  error

	expr  goto 81
	arith_expr  goto 13
	factor_expr  goto 14
	app_expr  goto 15
	atomic_expr  goto 16


state 78
	toplevel : LET REC var var EQ expr SEMISEMI .  (4)

	.  reduce 4


state 79
	expr : LET var vars EQ expr IN expr .  (6)

	.  reduce 6


state 80
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 77
	.  error


state 81
	expr : LET REC var var EQ expr IN expr .  (7)

	.  reduce 7


25 terminals, 10 nonterminals
31 grammar rules, 82 states
